--- a/web/src/styles/main.css
+++ b/web/src/styles/main.css
@@ -13,9 +13,9 @@
     @apply bg-zinc-900 py-3 px-4 rounded text-sm placeholder:text-zinc-500;
   }
   .btn-primary {
-    @apply bg-violet-500 hover:bg-violet-600 px-4 py-3 rounded-md font-semibold flex items-center gap-3;
+    @apply bg-violet-500 hover:bg-violet-600 px-4 py-3 rounded-md font-semibold flex items-center gap-3 transition;
   }
   .btn-secondary {
-    @apply bg-zinc-500 hover:bg-zinc-600 px-4 py-3 rounded-md font-semibold;
+    @apply bg-zinc-500 hover:bg-zinc-600 px-4 py-3 rounded-md font-semibold transition;
   }
 }
